--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-a5724fc elementor-invisible elementor-widget elementor-widget-heading" data-id="a5724fc" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Get $MEMES</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">Get $ECK</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-6be70ab elementor-widget elementor-widget-text-editor" data-id="6be70ab" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
