--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						Contract					</span>
 				</h2>
 									<p class="elementor-icon-box-description">
-						xxx					</p>
+						soon					</p>
 							</div>
 		</div>
 				</div>
