--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						Contract					</span>
 				</h2>
 									<p class="elementor-icon-box-description">
-						.					</p>
+						xxER4ppzzehC46ELfiwtUXwC69z4NNmUaiJCPqVpump					</p>
 							</div>
 		</div>
 				</div>
@@ -433,7 +433,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 						Contract					</span>
 				</h2>
 									<p class="elementor-icon-box-description">
-						pump					</p>
+						xxER4ppzzehC46ELfiwtUXwC69z4NNmUaiJCPqVpump					</p>
 							</div>
 		</div>
 				</div>
